Bug 233287 - Introduction of TagsCache has broken compilation on win32
Summary: Introduction of TagsCache has broken compilation on win32
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Portability-Compilation (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-04 21:34 UTC by Andrew Goodbody
Modified: 2017-08-19 20:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Goodbody 2010-04-04 21:34:23 UTC
Version:            (using Devel)
Compiler:          mingw4 
OS:                MS Windows
Installed from:    Compiled sources

Compiling from svnHEAD on win32 curretnly results in the following build failure.

Linking CXX shared library ..\bin\libdigikamdatabase.dll
Creating library file: ..\bin\libdigikamdatabase.dll.a
CMakeFiles\digikamdatabase.dir\__\libs\database\databaseaccess.obj:H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/databaseaccess.cpp:213: undefined reference to `_imp___ZN7Digikam9TagsCache8instanceEv'
CMakeFiles\digikamdatabase.dir\__\libs\database\databaseaccess.obj:H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/databaseaccess.cpp:213: undefined reference to `_imp___ZN7Digikam9TagsCache10initializeEv'
CMakeFiles\digikamdatabase.dir\__\libs\database\tagscache.obj:H:/src/km/build/extragear/digikam-1.1.0.20100203/work/mingw4-RelWithDebInfo-svnHEAD/digikam/tagscache.moc:55: undefined reference to `_imp___ZN7Digikam9TagsCache16staticMetaObjectE'
CMakeFiles\digikamdatabase.dir\__\libs\database\tagscache.obj: In function `_static_initialization_and_destruction_0':
H:/src/km/build/extragear/digikam-1.1.0.20100203/work/mingw4-RelWithDebInfo-svnHEAD/digikam/tagscache.moc:47: undefined reference to `_imp___ZN7Digikam9TagsCache16staticMetaObjectE'
CMakeFiles\digikamdatabase.dir\__\libs\database\tagscache.obj: In function `TagsCache':
H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/tagscache.cpp:132:
undefined reference to `_imp___ZTVN7Digikam9TagsCacheE'
H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/tagscache.cpp:132:
undefined reference to `_imp___ZTVN7Digikam9TagsCacheE'
CMakeFiles\digikamdatabase.dir\__\libs\database\tagscache.obj: In function `~TagsCache':
H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/tagscache.cpp:136:
undefined reference to `_imp___ZTVN7Digikam9TagsCacheE'
H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/tagscache.cpp:136:
undefined reference to `_imp___ZTVN7Digikam9TagsCacheE'
H:/src/km/svn/trunk/extragear/graphics/digikam/libs/database/tagscache.cpp:136:
undefined reference to `_imp___ZTVN7Digikam9TagsCacheE'
collect2: ld returned 1 exit status
mingw32-make[2]: *** [bin/libdigikamdatabase.dll] Error 1
mingw32-make[1]: *** [digikam/CMakeFiles/digikamdatabase.dir/all] Error 2
mingw32-make: *** [all] Error 2
emerge fatal error: while running make cmd: mingw32-make
emerge fatal error: running python h:\src\km\emerge\portage\extragear\digikam\digikam-1.1.0.20100203.py compile
emerge error: fatal error: package extragear/digikam-1.1.0.20100203 all failed
19:09
Comment 1 Marcel Wiesweg 2010-04-05 12:10:54 UTC
Yeah sorry, wrong EXPORT macro.
Comment 2 Marcel Wiesweg 2010-04-05 12:28:13 UTC
SVN commit 1111259 by mwiesweg:

Use correct EXPORT macro

BUG: 233287

 M  +2 -1      NEWS  
 M  +1 -1      libs/database/tagscache.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1111259