Use correct EXPORT macro

BUG: 233287

svn path=/trunk/extragear/graphics/digikam/; revision=1111259